syntax = "proto3";
package proto.services;

import "stats/messages/user_predictions_request.proto";
import "stats/messages/similar_events_request.proto";
import "stats/messages/interactions_count_request.proto";
import "stats/messages/recommended_event.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto.services";


service RecommendationsController {
  rpc GetRecommendationsForUser(proto.messages.UserPredictionsRequestProto)
      returns (stream proto.messages.RecommendedEventProto);

  rpc GetSimilarEvents(proto.messages.SimilarEventsRequestProto)
      returns (stream proto.messages.RecommendedEventProto);

  rpc GetInteractionsCount(proto.messages.InteractionsCountRequestProto)
      returns (stream proto.messages.RecommendedEventProto);
}